[package]
name = "redis-evaljs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "redisjs"

[dependencies]
num_cpus = "1.17.0"
rquickjs = { version = "0.12.1", features = ["parallel"] }
redis-module = "2.0.8"
once_cell = "1.21.4"
crossbeam-channel = "0.5.16"
smallvec = "1.15.2"
